{{$NEXT}}
        - Preview number always defaults no 9 (no more inheritance)
        - Config file syntax now allows "protected = [ filename.ext ]" to force array
        - Support for video files
        - New album variable "hide_children" to disable links to sub-albums

0.27      2015-04-16 11:31:14+02:00 Europe/Amsterdam
        - Added an option for randomized sorting ("sort = random")
        - Expanded the regex that recognizes images (.jpeg, .JPG now also valid)

0.26      2015-04-14 18:07:52+02:00 Europe/Amsterdam
        - The destination argument of the photog command is now optional
        - More useful output when verbose
        - More silent output when silent
        - A friendly goodbye message after each run

0.25      2015-04-13 14:36:04+02:00 Europe/Amsterdam
        - Rewrote the photog-xxx commands from bash to Perl so they work in Windows
        - This fixes bug #103486 "No Perl script found in input"
        - Photog! now works on Windows, confirmed on Windows XP

0.24
        - Fixed bug #103476 "Failed to find shared file 'template.html'"
        - Photog! should work on Macs, but this has not been confirmed

0.22
        - The first release of Photog! on CPAN and Github

0.2
        - A total rewrite with a separate module for configuration

0.1
        - The first version of Photog! written in Perl

0.01
        - The first version of Photog!, implemented as a bash script