@@ -3,6 +3,7 @@
         - Config file syntax now allows "protected = [ filename.ext ]" to force array
         - Support for video files
         - New album variable "hide_children" to disable links to sub-albums
+        - Sorting now defaults to "ascending" for every album
 
 0.27      2015-04-16 11:31:14+02:00 Europe/Amsterdam
         - Added an option for randomized sorting ("sort = random")
